--- a/APEX/Projeto-WebSite-APEX1/index.html
+++ b/APEX/Projeto-WebSite-APEX1/index.html
@@ -1,34 +1,86 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css" type="text/css">
-    <link rel="stylesheet" href="style.css" type="text/css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="responsive.css" type="text/css" />
+    <link rel="stylesheet" href="config.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
 
     <!--Icons create-->
-    <link rel="apple-touch-icon" sizes="180x180" href="Icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Icons/favicon-16x16.png">
-    <link rel="manifest" href="Icons/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="Icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="Icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="Icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="Icons/site.webmanifest" />
     <!--Icons create-->
-
 
     <title>O que é LGPD?</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <header>
-            <div class="img-wrapper">
-                <img src="./Assets/LGPD1.jpg">
-            </div>
-            <div class="banner">
-                <h1>uhaudhiasuhdaifhaisdfhiufhisuf</h1>
-                <p>Bruna Costa</p>
-                <button>Saiba mais</button>
-            </div>
-        </header>
-    </div>    
-</body>
+
+      <!--Menu--> 
+      <div class="hamburguer">
+        <div class="line" id="line1"></div>
+        <div class="line" id="line2"></div>
+        <div class="line" id="line3"></div>
+      </div>
+      <!--Menu-->
+
+       <!--Banner-->
+      <header>
+        <div class="img-wrapper">
+          <img src="./Assets/LGPD1.jpg" />
+        </div>
+        <div class="banner">
+          <h1>uhaudhiasuhdaifhaisdfhiufhisuf</h1>
+          <p>Bruna Costa</p>
+          <button>Saiba mais</button>
+        </div>
+      </header>
+       <!--Banner-->
+
+        <!--Links do Menu-->
+      <div class="sidebar">
+        <nav>
+          <ul class="menu">
+            <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Conhecimento</a>
+            </li>
+            <li class="menu-item"><a href="#" class="menu-link">Projeto</a></li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Contatos</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Orçamento</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="social-media">
+          <a href=""><i class="fab fa-linkedin"></i></a
+          ><a href=""><i class="fab fa-instagram"></i></a
+          ><a href=""><i class="fab fa-github-alt"></i></a>
+        </div>
+      </div>
+      <!--Links do Menu-->
+    </div>
+  </body>
+
+  <script src="script.js"></script>
 </html>
