--- a/APEX/Projeto-WebSite-APEX1/index.html
+++ b/APEX/Projeto-WebSite-APEX1/index.html
@@ -48,20 +48,24 @@
           <img src="./Assets/LGPD1.jpg" />
         </div>
         <div class="banner">
-          <h1>uhaudhiasuhdaifhaisdfhiufhisuf</h1>
-          <p>Bruna Costa</p>
-          <button>Saiba mais</button>
+          <h1>LGPD no Desenvolvimento de Softwares</h1>
+          <p>Trabalho de extensão em Análise e Desenvolvimento de Sistemas 1</p>
+          <button class="button-as-link">
+            <a href="https://materiais.alterdata.com.br/politica-de-privacidade-alterdata" target="_blank">
+              Saiba Mais
+            </a>
+          </button>
         </div>
       </header>
        <!--Banner-->
 
         <!--Links do Menu-->
-      <div class="sidebar">
+      <aside class="sidebar">
         <nav>
           <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Conhecimento</a>
+              <a href="#" class="menu-link">O que é a LGPD?</a>
             </li>
             <li class="menu-item"><a href="#" class="menu-link">Projeto</a></li>
             <li class="menu-item">
@@ -73,12 +77,99 @@
           </ul>
         </nav>
         <div class="social-media">
-          <a href=""><i class="fab fa-linkedin"></i></a
-          ><a href=""><i class="fab fa-instagram"></i></a
-          ><a href=""><i class="fab fa-github-alt"></i></a>
+          <a href="https://www.linkedin.com/feed/?trk=homepage-basic_google-one-tap-submit"><i class="fab fa-linkedin"></i></a
+          ><a href="https://instagram.com/brunnaantonelloterranacosta?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a
+          ><a href="https://github.com/Bantonello"><i class="fab fa-github-alt"></i></a>
         </div>
-      </div>
+      </aside>
       <!--Links do Menu-->
+
+      <!--Conhecimentos-->
+      <section class="sessao-conhecimento">
+        <div class="sessao-header">
+          <h1>O que é a LGPD?</h1>
+        </div>
+        <div class="sessao-header">
+          <h2>Quais práticas podem ser adotadas no desenvolvimento de software?</h2>
+        </div>
+        <div class="conhecimentos">
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fa fa-cogs"></i>
+              <h3>1. Pró-ativo não reativo; preventivo não corretivo</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>A ideia central é desenvolver métodos que permitam prever situações que coloquem em risco a privacidade dos
+                dados. Dessa maneira, espera-se que a equipe de desenvolvimento não espere o problema aparecer para,
+                somente então, agir, mas sim buscar antecipar o que pode ser um ponto fraco e resolver antes mesmo de sua
+                ocorrência.</p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fa fa-id-card"></i>
+              <h3>2. Privacidade como padrão</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Provavelmente um dos princípios mais relevantes, adotar a privacidade como padrão de qualquer sistema,
+                solução ou demais práticas de um negócio é essencial. Isso significa que o titular dos dados não precisa fazer
+                qualquer tipo de configuração para que não tenha os seus dados capturados, pois esse já é o padrão pré-
+                estabelecido.</p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fa fa-code"></i>
+              <h3>3. Privacidade incorporada ao projeto</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>A privacidade deve estar incorporada em todas as fases de um projeto e não ser vista como um adicional. Desse
+                modo, a arquitetura dos sistemas de TI deve considerar desde o seu planejamento até a distribuição de todos os
+                dispositivos que garantam a privacidade dos dados.</p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fa fa-shield"></i>
+              <h3>4. Segurança de ponta a ponta</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Todas as formas de tratamento de dados devem estar protegidas sob rígidos padrões de segurança. Dessa
+                maneira, todo o ciclo de vida do dado, desde o momento em que ele é coletado até o momento de seu descarte,
+                deve ser seguro.</p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fa fa-check-square"></i>
+              <h3>5. Visibilidade e transparência</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>Outro ponto chave do Privacy by Design, bem como das leis de regulamentação, a transparência é indispensável
+                para que seja garantidas confiança e responsabilidade. Sendo assim, todas as condições de uso e termos
+                relacionados aos dados pessoais devem ser exibidos para os seus titulares de forma clara.</p>
+            </div>
+          </div>
+          <div class="conhecimento">
+            <div class="conhecimento-header">
+              <i class="fa fa-users"></i>
+              <h3>6. Respeito pela privacidade do usuário</h3>
+            </div>
+            <div class="conhecimento-text">
+              <p>O ponto de partida de qualquer solução a ser desenvolvida deve sempre considerar o interesse do usuário. Por
+                assim ser, a proteção dos dados deve ser a base do desenvolvimento em todas as situações.
+                Portanto, a partir do que foi levantado, é nítido que uma nova postura em relação ao tratamento dos dados
+                pessoais de clientes e consumidores é primordial para que se garantam os direitos estabelecidos pela LGPD.</p>
+            </div>
+          </div>
+          <div class="conhecimentos-img-wrapper">
+            <img src="./Assets/security.png" alt="LGPD">
+          </div>
+        </div>
+      </section>
+      <!--Conhecimentos-->
+
+
     </div>
   </body>
 
