--- a/APEX/Projeto-WebSite-APEX1/index.html
+++ b/APEX/Projeto-WebSite-APEX1/index.html
@@ -33,8 +33,7 @@
   </head>
   <body>
     <div class="container">
-
-      <!--Menu--> 
+      <!--Menu-->
       <div class="hamburguer">
         <div class="line" id="line1"></div>
         <div class="line" id="line2"></div>
@@ -42,7 +41,7 @@
       </div>
       <!--Menu-->
 
-       <!--Banner-->
+      <!--Banner-->
       <header>
         <div class="img-wrapper">
           <img src="./Assets/LGPD1.jpg" />
@@ -51,15 +50,18 @@
           <h1>LGPD no Desenvolvimento de Softwares</h1>
           <p>Trabalho de extensão em Análise e Desenvolvimento de Sistemas 1</p>
           <button class="button-as-link">
-            <a href="https://materiais.alterdata.com.br/politica-de-privacidade-alterdata" target="_blank">
+            <a
+              href="https://materiais.alterdata.com.br/politica-de-privacidade-alterdata"
+              target="_blank"
+            >
               Saiba Mais
             </a>
           </button>
         </div>
       </header>
-       <!--Banner-->
+      <!--Banner-->
 
-        <!--Links do Menu-->
+      <!--Links do Menu-->
       <aside class="sidebar">
         <nav>
           <ul class="menu">
@@ -77,9 +79,15 @@
           </ul>
         </nav>
         <div class="social-media">
-          <a href="https://www.linkedin.com/feed/?trk=homepage-basic_google-one-tap-submit"><i class="fab fa-linkedin"></i></a
-          ><a href="https://instagram.com/brunnaantonelloterranacosta?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a
-          ><a href="https://github.com/Bantonello"><i class="fab fa-github-alt"></i></a>
+          <a
+            href="https://www.linkedin.com/feed/?trk=homepage-basic_google-one-tap-submit"
+            ><i class="fab fa-linkedin"></i></a
+          ><a
+            href="https://instagram.com/brunnaantonelloterranacosta?igshid=YmMyMTA2M2Y="
+            ><i class="fab fa-instagram"></i></a
+          ><a href="https://github.com/Bantonello"
+            ><i class="fab fa-github-alt"></i
+          ></a>
         </div>
       </aside>
       <!--Links do Menu-->
@@ -87,10 +95,12 @@
       <!--Conhecimentos-->
       <section class="sessao-conhecimento">
         <div class="sessao-header">
-          <h1>O que é a LGPD?</h1>
+          <h1>Lei Geral de Proteção de Dados</h1>
         </div>
         <div class="sessao-header">
-          <h2>Quais práticas podem ser adotadas no desenvolvimento de software?</h2>
+          <h2>
+            Quais práticas podem ser adotadas no desenvolvimento de software?
+          </h2>
         </div>
         <div class="conhecimentos">
           <div class="conhecimento">
@@ -99,10 +109,14 @@
               <h3>1. Pró-ativo não reativo; preventivo não corretivo</h3>
             </div>
             <div class="conhecimento-text">
-              <p>A ideia central é desenvolver métodos que permitam prever situações que coloquem em risco a privacidade dos
-                dados. Dessa maneira, espera-se que a equipe de desenvolvimento não espere o problema aparecer para,
-                somente então, agir, mas sim buscar antecipar o que pode ser um ponto fraco e resolver antes mesmo de sua
-                ocorrência.</p>
+              <p>
+                A ideia central é desenvolver métodos que permitam prever
+                situações que coloquem em risco a privacidade dos dados. Dessa
+                maneira, espera-se que a equipe de desenvolvimento não espere o
+                problema aparecer para, somente então, agir, mas sim buscar
+                antecipar o que pode ser um ponto fraco e resolver antes mesmo
+                de sua ocorrência.
+              </p>
             </div>
           </div>
           <div class="conhecimento">
@@ -111,10 +125,14 @@
               <h3>2. Privacidade como padrão</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Provavelmente um dos princípios mais relevantes, adotar a privacidade como padrão de qualquer sistema,
-                solução ou demais práticas de um negócio é essencial. Isso significa que o titular dos dados não precisa fazer
-                qualquer tipo de configuração para que não tenha os seus dados capturados, pois esse já é o padrão pré-
-                estabelecido.</p>
+              <p>
+                Provavelmente um dos princípios mais relevantes, adotar a
+                privacidade como padrão de qualquer sistema, solução ou demais
+                práticas de um negócio é essencial. Isso significa que o titular
+                dos dados não precisa fazer qualquer tipo de configuração para
+                que não tenha os seus dados capturados, pois esse já é o padrão
+                pré- estabelecido.
+              </p>
             </div>
           </div>
           <div class="conhecimento">
@@ -123,9 +141,13 @@
               <h3>3. Privacidade incorporada ao projeto</h3>
             </div>
             <div class="conhecimento-text">
-              <p>A privacidade deve estar incorporada em todas as fases de um projeto e não ser vista como um adicional. Desse
-                modo, a arquitetura dos sistemas de TI deve considerar desde o seu planejamento até a distribuição de todos os
-                dispositivos que garantam a privacidade dos dados.</p>
+              <p>
+                A privacidade deve estar incorporada em todas as fases de um
+                projeto e não ser vista como um adicional. Desse modo, a
+                arquitetura dos sistemas de TI deve considerar desde o seu
+                planejamento até a distribuição de todos os dispositivos que
+                garantam a privacidade dos dados.
+              </p>
             </div>
           </div>
           <div class="conhecimento">
@@ -134,9 +156,12 @@
               <h3>4. Segurança de ponta a ponta</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Todas as formas de tratamento de dados devem estar protegidas sob rígidos padrões de segurança. Dessa
-                maneira, todo o ciclo de vida do dado, desde o momento em que ele é coletado até o momento de seu descarte,
-                deve ser seguro.</p>
+              <p>
+                Todas as formas de tratamento de dados devem estar protegidas
+                sob rígidos padrões de segurança. Dessa maneira, todo o ciclo de
+                vida do dado, desde o momento em que ele é coletado até o
+                momento de seu descarte, deve ser seguro.
+              </p>
             </div>
           </div>
           <div class="conhecimento">
@@ -145,9 +170,13 @@
               <h3>5. Visibilidade e transparência</h3>
             </div>
             <div class="conhecimento-text">
-              <p>Outro ponto chave do Privacy by Design, bem como das leis de regulamentação, a transparência é indispensável
-                para que seja garantidas confiança e responsabilidade. Sendo assim, todas as condições de uso e termos
-                relacionados aos dados pessoais devem ser exibidos para os seus titulares de forma clara.</p>
+              <p>
+                Outro ponto chave do Privacy by Design, bem como das leis de
+                regulamentação, a transparência é indispensável para que seja
+                garantidas confiança e responsabilidade. Sendo assim, todas as
+                condições de uso e termos relacionados aos dados pessoais devem
+                ser exibidos para os seus titulares de forma clara.
+              </p>
             </div>
           </div>
           <div class="conhecimento">
@@ -156,20 +185,158 @@
               <h3>6. Respeito pela privacidade do usuário</h3>
             </div>
             <div class="conhecimento-text">
-              <p>O ponto de partida de qualquer solução a ser desenvolvida deve sempre considerar o interesse do usuário. Por
-                assim ser, a proteção dos dados deve ser a base do desenvolvimento em todas as situações.
-                Portanto, a partir do que foi levantado, é nítido que uma nova postura em relação ao tratamento dos dados
-                pessoais de clientes e consumidores é primordial para que se garantam os direitos estabelecidos pela LGPD.</p>
+              <p>
+                O ponto de partida de qualquer solução a ser desenvolvida deve
+                sempre considerar o interesse do usuário. Por assim ser, a
+                proteção dos dados deve ser a base do desenvolvimento em todas
+                as situações. Portanto, a partir do que foi levantado, é nítido
+                que uma nova postura em relação ao tratamento dos dados pessoais
+                de clientes e consumidores é primordial para que se garantam os
+                direitos estabelecidos pela LGPD.
+              </p>
             </div>
           </div>
           <div class="conhecimentos-img-wrapper">
-            <img src="./Assets/security.png" alt="LGPD">
+            <img src="./Assets/security.png" alt="LGPD" />
           </div>
         </div>
       </section>
       <!--Conhecimentos-->
 
+      <!--Projetos-->
+      <div class="sessao-projetos">
+        <div class="sessao-header">
+          <h1>Quais são os desafios que a LGPD traz para o time de TI ?</h1>
+        </div>
+        <div class="projetos">
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="./Assets/cyber-security.png" alt="" class="" />
+            </div>
+            <div class="card-info">
+              <h2>Privacidade como configuração padrão</h2>
+              <h3>
+                Em grande parte das empresas, os dados não têm “dono”. Isso
+                dificulta bastante a implementação de programas que visam a
+                segurança da informação. Mas fica a cargo da TI auditar quais e
+                como as tecnologias capturam esses dados sensíveis e se eles
+                possuem consentimento dos titulares.
+              </h3>
+              <p></p>
+              <button></button>
+            </div>
+          </div>
 
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img
+                src="./Assets/transferencia-de-arquivo.png"
+                alt=""
+                class=""
+              />
+            </div>
+            <div class="card-info">
+              <h2>Transparência na coleta de dados</h2>
+              <h3>
+                Esse certamente é um dos principais desafios que a LGPD traz
+                para a TI. Na missão de tornar os canais de captura de dados
+                cada vez mais transparentes, é preciso asseverar uma visão única
+                dos dados de toda a organização. Ou seja, é preciso que a TI
+                auxilie a empresa a entender onde os dados estão em todos os
+                momentos, seja de coleta, armazenamento, processamento etc.
+              </h3>
+              <p></p>
+              <button></button>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="./Assets/cole.png" alt="" class="" />
+            </div>
+            <div class="card-info">
+              <h2>Tecnologias confiáveis para armazenamento</h2>
+              <h3>
+                Não só no momento de implementação da LGPD, mas de forma
+                contínua, o time de TI deve ter um caráter mais proativo acerca
+                do armazenamento de dados, prevendo e antecipando eventos que
+                possam comprometer a privacidade. Por isso, ela deve buscar
+                opções flexíveis, ágeis e confiáveis de backups, que facilitem a
+                centralização, (lembra a visão única sobre os dados que citamos
+                acima?), o monitoramento, a integridade das informações e a
+                recuperação de dados.
+              </h3>
+              <p></p>
+              <button></button>
+            </div>
+          </div>
+        </div> </br>
+
+        <div class="projetos2">
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="./Assets/armazenamento-na-nuvem.png" alt="" class="" />
+            </div>
+            <div class="card-info">
+              <h2>Segurança em nuvem</h2>
+              <h3>
+                A segurança em nuvem auxilia na inovação das companhias,
+                agregando funcionalidades voltadas para operações em larga
+                escala, favorecendo o crescimento de serviços e protegendo os
+                dados de negócios em datacenters. Ainda assim, escolher
+                cuidadosa e adequadamente o provedor de serviços na nuvem é um
+                desafio que o time de TI deve enfrentar imediatamente. Pois,
+                além de garantir que o negócio cresça em operações sem colocar
+                os dados em risco, o provedor deve proporcionar visibilidade da
+                nuvem.
+              </h3>
+              <p></p>
+              <button></button>
+            </div>
+          </div>
+  
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="./Assets/acesso-privado.png" alt="" class="" />
+            </div>
+            <div class="card-info">
+              <h2>Governança de cadastros e acessos</h2>
+              <h3>
+                Dessa forma, as companhias devem ter atenção à gestão de
+                cadastros e senhas, automatizando a gestão de usuários para
+                facilitar que os titulares decidam quem tem acesso aos dados ou
+                não. A governança também deve garantir a realização rápida e
+                definitiva quando o titular solicitar.
+              </h3>
+              <p></p>
+              <button></button>
+            </div>
+          </div>
+  
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="./Assets/api.png" alt="" class="" />
+            </div>
+            <div class="card-info">
+              <h2>Gerenciamento de API</h2>
+              <h3>
+                Alguns desafios levantados pela implementação da LGPD podem
+                facilmente ser resolvidos com aplicações e automatizações,
+                principalmente aquelas voltadas para consentimento do usuário.
+                Mas atenção: as APIs também devem entrar para observância do
+                time de TI, uma vez que a compliance com a LGPD é uma tarefa
+                delicada e que exige acompanhamento rigoroso e contínuo de todos
+                os sistemas envolvidos.
+              </h3>
+              <p></p>
+              <button></button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Projetos-->
+
+      
     </div>
   </body>
 
