--- a/APEX/Projeto-WebSite-APEX1/index.html
+++ b/APEX/Projeto-WebSite-APEX1/index.html
@@ -211,7 +211,7 @@
         <div class="projetos">
           <div class="card">
             <div class="card-img-wrapper">
-              <img src="./Assets/cyber-security.png" alt="" class="" />
+              <img src="./Assets/privacidade.png" alt="" class="" />
             </div>
             <div class="card-info">
               <h2>Privacidade como configuração padrão</h2>
@@ -230,7 +230,7 @@
           <div class="card">
             <div class="card-img-wrapper">
               <img
-                src="./Assets/transferencia-de-arquivo.png"
+                src="./Assets/senha.png"
                 alt=""
                 class=""
               />
@@ -252,7 +252,7 @@
 
           <div class="card">
             <div class="card-img-wrapper">
-              <img src="./Assets/cole.png" alt="" class="" />
+              <img src="./Assets/servidor.png" alt="" class="" />
             </div>
             <div class="card-info">
               <h2>Tecnologias confiáveis para armazenamento</h2>
@@ -275,7 +275,7 @@
         <div class="projetos2">
           <div class="card">
             <div class="card-img-wrapper">
-              <img src="./Assets/armazenamento-na-nuvem.png" alt="" class="" />
+              <img src="./Assets/nuvem.png" alt="" class="" />
             </div>
             <div class="card-info">
               <h2>Segurança em nuvem</h2>
@@ -297,7 +297,7 @@
   
           <div class="card">
             <div class="card-img-wrapper">
-              <img src="./Assets/acesso-privado.png" alt="" class="" />
+              <img src="./Assets/impressao-digital.png" alt="" class="" />
             </div>
             <div class="card-info">
               <h2>Governança de cadastros e acessos</h2>
@@ -315,7 +315,7 @@
   
           <div class="card">
             <div class="card-img-wrapper">
-              <img src="./Assets/api.png" alt="" class="" />
+              <img src="./Assets/criptografia-de-dados.png" alt="" class="" />
             </div>
             <div class="card-info">
               <h2>Gerenciamento de API</h2>
@@ -336,7 +336,48 @@
       </section>
       <!--Projetos-->
 
-      
+      <!--Rodapé-->
+      <footer class="principal">
+        <div class="boxs">
+          <h2>O impacto da LGPD na área de Desenvolvimento de Sistemas.</h2>
+          <p>
+            Trabalho acadêmico apresentado em cumprimento das exigências da disciplina de Ambiente Profissional e de Extensão (APEX I) 
+            do Curso Superior de Tecnologia em Análise e Desenvolvimento de sistemas. 
+            Orientador: Carla Correa Tavares dos Reis            
+          </p>
+        </div>
+
+        <div class="boxs">
+          <h2>Alunos:</h2>
+          <p>Amanda Caroline de Jesus Rocha</p>
+          <p>Bruna Costa de Oliveira</p>
+          <p>Ismael Gonçalves da Silva</p>
+          <p>Telmo Bezerra da Silva Junior</p>
+        </div>
+
+        <div class="boxs">
+          <h2>Quer saber mais sobre o que abrange a Lei da LGPD?</h2>
+          <p>Acesse:</p>
+          <ul>
+            <li><a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm">Lei Nº 13.709, de 14 de Agosto de 2018</a></li>
+          </ul>
+        </div>
+
+        <div class="boxs">
+          <h2>Referências Bibliográficas:</h2>
+          <ul>
+            <li><a href="https://materiais.alterdata.com.br/politica-de-privacidade-alterdata">Alterdata Software</a></li>
+            <li><a href="https://softfocus.com.br/lgpd-no-desenvolvimento-de-software/">Soft Focus</a></li>
+            <li><a href="https://www.lgpdbrasil.com.br/">LGPD Brasil</a></li>
+          </ul>
+        </div>
+      </footer>
+
+      <footer class="secundario">
+        <P>© Copyright 2022 - BrunaCosta/Dev - All Rights Reserved</P>
+      </footer>
+      <!--Rodapé--> 
+           
     </div>
   </body>
 
