--- a/APEX/Projeto-WebSite-APEX1/index.html
+++ b/APEX/Projeto-WebSite-APEX1/index.html
@@ -67,25 +67,25 @@
           <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
             <li class="menu-item">
-              <a href="#" class="menu-link">O que é a LGPD?</a>
+              <a href="https://www.gov.br/cidadania/pt-br/acesso-a-informacao/lgpd" target="_blanck" rel="nofollow" class="menu-link">O que é a LGPD?</a>
             </li>
-            <li class="menu-item"><a href="#" class="menu-link">Projeto</a></li>
+            <li class="menu-item"><a href="https://www.gov.br/cidadania/pt-br/acesso-a-informacao/lgpd/classificacao-dos-dados" target="_blanck" rel="nofollow" class="menu-link">Classificação de Dados</a></li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Contatos</a>
+              <a href="https://www.gov.br/cidadania/pt-br/acesso-a-informacao/lgpd/principios-da-lgpd" target="_blanck" rel="nofollow" class="menu-link">Princípios da LGPD</a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Orçamento</a>
+              <a href="#consideracao" class="menu-link">Considerações finais.</a>
             </li>
           </ul>
         </nav>
         <div class="social-media">
           <a
-            href="https://www.linkedin.com/feed/?trk=homepage-basic_google-one-tap-submit"
+            href="https://www.linkedin.com/feed/?trk=homepage-basic_google-one-tap-submit" target="_blanck" rel="nofollow"
             ><i class="fab fa-linkedin"></i></a
           ><a
-            href="https://instagram.com/brunnaantonelloterranacosta?igshid=YmMyMTA2M2Y="
+            href="https://instagram.com/brunnaantonelloterranacosta?igshid=YmMyMTA2M2Y=" target="_blanck" rel="nofollow"
             ><i class="fab fa-instagram"></i></a
-          ><a href="https://github.com/Bantonello"
+          ><a href="https://github.com/Bantonello" target="_blanck" rel="nofollow"
             ><i class="fab fa-github-alt"></i
           ></a>
         </div>
@@ -102,7 +102,7 @@
             Quais práticas podem ser adotadas no desenvolvimento de software?
           </h2>
         </div>
-        <div class="conhecimentos">
+        <div class="conhecimentos">          
           <div class="conhecimento">
             <div class="conhecimento-header">
               <i class="fa fa-cogs"></i>
@@ -205,6 +205,7 @@
 
       <!--Projetos-->
       <div class="sessao-projetos">
+        <a name="Quais são os desafios?"></a>
         <div class="sessao-header">
           <h1>Quais são os desafios que a LGPD traz para o time de TI ?</h1>
         </div>
@@ -339,7 +340,7 @@
       <!--Rodapé-->
       <footer class="principal">
         <div class="boxs">
-          <h2>O impacto da LGPD na área de Desenvolvimento de Sistemas.</h2>
+          <h2 id="consideracao">O impacto da LGPD na área de Desenvolvimento de Sistemas.</h2>
           <p>
             Trabalho acadêmico apresentado em cumprimento das exigências da disciplina de Ambiente Profissional e de Extensão (APEX I) 
             do Curso Superior de Tecnologia em Análise e Desenvolvimento de sistemas. 
@@ -359,16 +360,16 @@
           <h2>Quer saber mais sobre o que abrange a Lei da LGPD?</h2>
           <p>Acesse:</p>
           <ul>
-            <li><a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm">Lei Nº 13.709, de 14 de Agosto de 2018</a></li>
+            <li><a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm" target="_blanck" rel="nofollow" >Lei Nº 13.709, de 14 de Agosto de 2018</a></li>
           </ul>
         </div>
 
         <div class="boxs">
           <h2>Referências Bibliográficas:</h2>
           <ul>
-            <li><a href="https://materiais.alterdata.com.br/politica-de-privacidade-alterdata">Alterdata Software</a></li>
-            <li><a href="https://softfocus.com.br/lgpd-no-desenvolvimento-de-software/">Soft Focus</a></li>
-            <li><a href="https://www.lgpdbrasil.com.br/">LGPD Brasil</a></li>
+            <li><a href="https://materiais.alterdata.com.br/politica-de-privacidade-alterdata" target="_blanck" rel="nofollow" >Alterdata Software</a></li>
+            <li><a href="https://softfocus.com.br/lgpd-no-desenvolvimento-de-software/" target="_blanck" rel="nofollow" >Soft Focus</a></li>
+            <li><a href="https://www.lgpdbrasil.com.br/" target="_blanck" rel="nofollow" >LGPD Brasil</a></li>
           </ul>
         </div>
       </footer>
